Inclusão de parágrafo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Test git</title>
 </head>
 <body>
-    <h1> Primeiro html no GitHub, não es </h1>
+    <h1> Primeiro html no GitHub</h1>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quibusdam ab accusantium praesentium eius deserunt. Eligendi quod quam distinctio! Expedita dolores facilis ex placeat! Libero dicta iste delectus quas pariatur dolores, officiis ab vitae earum tenetur labore excepturi reiciendis, et voluptates obcaecati deleniti ex! Dolor ipsam doloremque a fuga debitis?
 
 </body>
 </html>
